phase2_Dev/src/objects/Response__c.object
<CustomObject>
    <fields>
        <fullName>FormComponent__c</fullName>
        <label>Form Component</label>
        <referenceTo>FormComponent__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Form_Component_UUID__c</fullName>
        <formula>FormComponent__r.UUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Component UUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intake__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intake</label>
        <referenceTo>Intake__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Value</label>
        <length>8042</length>
        <type>LongTextArea</type>
    </fields>
    <label>Response</label>
    <nameField>
        <displayFormat>RESP-{0}</displayFormat>
        <label>Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>